	  by application software.
	* include/net/uip/igmp.h and uip-igmp.h - Add header files ini
	  preparation for NuttX IGMP support
	* net/uip/uip_igmp*.c - Add IGMP support (untested on initial
	  checkin).
	* examples/igmp - Add a trivial test for IGMP (much more is needed)
	* configs/nucleus2g/usbserial and usbstorage - Add USB configurations
	  for testing purposes.
	* arch/arm/src/common/up_internal.h, cortexm3/up_assert.c,
	  */*_vectors.S - Correct compilations errors when CONFIG_ARCH_INTERRUPTSTACK
	  is enabled (feature still not tested)

5.9 2010-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* examples/nsh/nsh_telnetd.c - Fix compilation errors that happen
	  when both DHCPC and TELNETD are enabled in the Nuttshell.
	* graphics/nxglib/fb/nxglib_moverectangle.c - Fix a logic error
	  that caused an uninitialized variable warning.  I still don't 
	  have a test to prove that the changes are correct.
	* configs/olimex-lpc2378 - Add support for the CodeSourcery toolchain
	  under Linux (contributed by Alan Carvalho de Assis).
	* arch/arm/src/lpc17xx/lpc17_gpio.c - Fix an imporation GPIO configuration
	  bug:  When attempting to set no pull-up or pull-down (floating),
	  it would, instead, select pull-down.
	* arch/arm/src/lm3s/lm3s_gpioirq.c - Fix warning for returning a value
	  from functions returning void (contributed by Tiago Maluta).
	* netutils/dhcpc/dhcpc.c -- lease_time was not in host order
	* examples/uip/main.c - if DHCPC is selected, this example now shows
	  the assigned IP address.
	* arch/arm/src/lm3s and arch/arm/include/lm3s - Definitions for the
      TI LM3S9B96 contributed by Tiago Maluta.
	* arch/arm/src/lm3s/lm3s_gioirq.c - Fix a logic error in the address
	  table lookup.
	* arch/arm/src/lm3s/lm3s_gioirq.c - Also needs to enable the global
      GPIO interrupts.
	* arch/arm/src/lm3s/lm3s_internal.h and lm3s_gpio.c - Fixed the encoding
	  of GPIO port number that limited support for GPIO ports to 8