@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: August 12, 2010</p>
+      <p>Last Updated: August 14, 2010</p>
     </td>
   </tr>
 </table>
@@ -341,6 +341,14 @@
   <td>
     <p>
       <li>Extensions to manage pre-emption.</li>
+    </p>
+</tr>
+
+<tr>
+  <td><br></td>
+  <td>
+    <p>
+      <li>On-demand paging.</li>
     </p>
 </tr>
 
@@ -1879,6 +1887,9 @@ nuttx-5.9 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
       GPIO interrupts.
 	* arch/arm/src/lm3s/lm3s_internal.h and lm3s_gpio.c - Fixed the encoding
 	  of GPIO port number that limited support for GPIO ports to 8
+	* sched/pg_*.c and *.c and include/nuttx/page.h - Implemented the
+	  common, core logic for on-demand paging. See
+	  http://www.nuttx.org/NuttXDemandPaging.html for details.
 
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
@@ -1927,6 +1938,10 @@ buildroot-1.9 2010-xx-xx <spudmonkey@racsa.co.cr>
 <tr>
   <td valign="top" width="22"><img height="20" width="20" src="favicon.ico"></td>
   <td><a href="NXGraphicsSubsystem.html">NX Graphics Subsystem</a></td>
+</tr>
+<tr>
+  <td valign="top" width="22"><img height="20" width="20" src="favicon.ico"></td>
+  <td><a href="NuttXDemandPaging.html">Demand Paging</a></td>
 </tr>
 <tr>
   <td valign="top" width="22"><img height="20" width="20" src="favicon.ico"></td>
